[gd_scene load_steps=6 format=2]

[ext_resource path="res://Art Assets/Bin.png" type="Texture" id=1]
[ext_resource path="res://Art Assets/ExclamationPoint.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Bin.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 29, 29 )

[node name="Bin" type="StaticBody2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 6 )
shape = SubResource( 1 )

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
shape = SubResource( 2 )

[node name="InZone" type="Sprite" parent="."]
position = Vector2( 0, -22 )
texture = ExtResource( 2 )

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_PlayerDetection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_PlayerDetection_body_exited"]
